# toutiao-fastapi

./: main.py  pyproject.toml
config/: db_config.py
crud/: favorite.py  news.py  users.py
models/: favorite.py  news.py  users.py
routers/: favorite.py  news.py  users.py
schemas/: base.py  favorite.py  users.py
utils/: auth.py  exception_handlers.py  execption.py  response.py  security.py
