[project]
name = "toutiao"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt < 5.0.0",
    "fastapi>=0.136.1",
    "passlib>=1.7.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "types-passlib>=1.7.7.20260211",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
]
